Swapped module order.

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -17,10 +17,6 @@ modules:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
-  - type: rpm-ostree
-    install:
-      - https://github.com/linux-surface/linux-surface/releases/download/silverblue-20201215-1/kernel-20201215-1.x86_64.rpm
-
   - type: dnf
     repos:
       files:
@@ -40,5 +36,11 @@ modules:
         - kernel-modules-extra
         - libwacom
         - libwacom-data
+
+  - type: rpm-ostree
+    replace:
+      - from-repo: https://pkg.surfacelinux.com/fedora/linux-surface.repo
+        packages:
+        - https://github.com/linux-surface/linux-surface/releases/download/silverblue-20201215-1/kernel-20201215-1.x86_64.rpm
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
