Changing to name of repo

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -18,7 +18,7 @@ modules:
       files:
         - https://pkg.surfacelinux.com/fedora/linux-surface.repo
     replace:
-      - from-repo: https://pkg.surfacelinux.com/fedora/linux-surface.repo
+      - from-repo: linux-surface
         packages:
         - old: kernel
           new: kernel-surface
